# auth-demo

./: .gitignore  README.md  auth demo.md  pyproject.toml
src/: Cli.py  Database.py  Key.py  Server.py  cryption.py  db.py  main.py
tests/: test_api_auth.py  test_cli.py  test_database.py  test_key_manager.py
